[gd_scene load_steps=10 format=3 uid="uid://cngtobjrx16rm"]

[ext_resource type="PackedScene" uid="uid://bgmwar11sj3c" path="res://src/assets/mesh/BasketballBall.tscn" id="1"]
[ext_resource type="Script" path="res://src/scene/prefab/balls/Basketball.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dxtwhbhk7mbmp" path="res://src/assets/texture/particle/dust.png" id="3"]
[ext_resource type="PackedScene" uid="uid://boib8c60g5414" path="res://src/scene/prefab/balls/BallSound.tscn" id="4"]

[sub_resource type="SphereShape3D" id="1"]
radius = 0.709416

[sub_resource type="ParticleProcessMaterial" id="4"]
emission_shape = 1
emission_sphere_radius = 0.3
gravity = Vector3(0, -2, 0)

[sub_resource type="StandardMaterial3D" id="5"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.117647)
albedo_texture = ExtResource("3")
uv1_scale = Vector3(3, 2, 2)
billboard_mode = 2

[sub_resource type="BoxMesh" id="6"]
material = SubResource("5")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="SphereShape3D" id="7"]
radius = 0.735033

[node name="Basketball" type="RigidBody3D"]
mass = 2.4
freeze_mode = 1
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource("2")

[node name="BasketballBall2" parent="." instance=ExtResource("1")]
transform = Transform3D(190.531, 0, 0, 0, -2.2713e-05, 190.531, 0, -190.531, -2.2713e-05, 0, 0, 0)

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Particles" type="GPUParticles3D" parent="."]
emitting = false
one_shot = true
process_material = SubResource("4")
draw_pass_1 = SubResource("6")

[node name="OmniLight" type="OmniLight3D" parent="."]

[node name="BreakArea" type="Area3D" parent="."]

[node name="CollisionShape" type="CollisionShape3D" parent="BreakArea"]
shape = SubResource("7")

[node name="BallSound" parent="." instance=ExtResource("4")]

[connection signal="body_entered" from="." to="." method="_on_Basketball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="BreakArea" to="." method="_on_BreakArea_body_entered"]
